--- a/style.css
+++ b/style.css
@@ -1,3 +1,124 @@
+/* Taib Islam Dipu */
+
+
 * {
     font-family: 'Poppins', sans-serif;
+
+}
+
+a:hover{
+    text-decoration: none;
+    color: green;
+}
+
+.brand-logo{
+    width: 154px;
+    height: 54px;
+}
+
+.top-search-navigation{
+    background-color: #003b19;
+    color: white;
+   
+}
+.top-search-navigation li{
+    display: inline;
+    margin-left: 10px;
+    color: white;
+}
+
+i{
+    margin-right: 5px;
+}
+
+header{
+    /* margin-top: 50px; */
+    padding-top: 50px;
+    padding-bottom: 50px;
+    text-align: center;
+}
+
+.row-item img:hover{
+    opacity: 0.5;
+    background-color: rgba(0, 0, 0, 0.158);
+}
+
+.item-weight{
+    background-color: green;
+    color: white;
+    padding: 3px 10px;
+    border-radius: 10px;
+    
+}
+
+.item-price{
+    border: 1px solid green;
+    color: #b64500;
+    padding: 3px 10px;
+    border-radius: 10px;
+    font-weight: 600;
+}
+
+.add-to-cart{
+    border: 1px solid green;
+    padding: 3px 30px;
+    color: green;
+    border-radius: 3px;
+}
+
+.add-to-cart:hover{
+    background-color: yellowgreen;
+    color: black;
+    
+}
+
+section{
+    margin-bottom: 100px;
+}
+
+
+/* new-arrival section */
+.item-description{
+    background-color: #e7e7e7;
+}
+
+
+/* product-categories section */
+
+.product-categories h3{
+    text-align: center;
+    margin-top: 10px;
+}
+
+
+
+.categories:hover{
+    box-shadow: 0px 0px 34px -15px rgba(0,0,0,0.59);
+}
+
+
+/* our-promises section */
+.our-promises{
+    text-align: center;
+}
+
+
+
+
+/* testimonial section*/
+.carousel-indicators li{
+ background-color: green;
+}
+
+.testimonial-description{
+    padding: 10px 50px;
+}
+
+/* Footer */
+footer{
+    font-weight: bold;
+}
+
+footer .fa:hover{
+    color: green;
 }
